# ai_auto_agent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  config.toml.example  package-lock.json  package.json
.specify/checklists/: requirements.md
.specify/memory/: constitution.md
data/: copyright_characters.json  genre_keywords.json
projects/: project
projects/19a32bcc-eb55-4f4b-80ce-1741dce88bab/: project.json
projects/396a827d-5af6-4779-a2c4-14135d145c64/: project.json
scripts/: fanqie-auto-record.js  fanqie-auto-recorded.js  fanqie-auto.js  fanqie-cookies.json  fanqie-recorded.js  record-fanqie.sh
specs/001-ai-novel-gen/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-egui-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-project-storage/: plan.md  spec.md  tasks.md
specs/004-improve-project-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/gui/: app.rs  mod.rs
src/models/: chapter.rs  fanqie.rs  feasibility.rs  mod.rs  novel.rs  outline.rs  validation.rs
src/services/: chapter_planning.rs  consistency.rs  content_filter.rs  context.rs  fanqie.rs  feasibility.rs  generation.rs  mod.rs  outline.rs  progress.rs  scoring.rs  scraping.rs  storage.rs  vector_store.rs
tests/: mod.rs
tests/contract/: mod.rs  test_chapter_plan.rs  test_feasibility.rs  test_generation.rs  test_outline.rs
tests/integration/: mod.rs  test_consistency.rs  test_outline.rs  test_scraping.rs
(+45 files in other folders)
