[package]
name = "ai-novel-agent"
version = "0.1.0"
edition = "2021"
description = "AI-powered novel generation system"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# Futures
futures = "0.3"

# For browser automation (via Node.js)
# Note: Use scripts/fanqie-auto.js with Node.js Playwright

# CLI
clap = { version = "4.4", features = ["derive"] }

# GUI
egui = "0.29"
eframe = "0.29"

# Font loading for CJK support
font-kit = "0.14"

# For vector storage (future phase)
# qdrant-client = "1.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"

# Test assertions
proptest = "1.4"
tempfile = "3.8"

[features]
default = ["std"]
std = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
